Change Log

2009-06-08
	Made PRINT-CODE recognize new numeric functions as primitives.
	Fixed INVERSEO procedure in AMK.
2009-06-07
	Made STRING->NUMBER recognize real numbers.
	Fix: missing initialization of got_d in string_numeric().
	Fix: FLOOR and EXACT->INEXACT did not normalize their results.
	Simplified counter_to_string(), based on code by Masaru KIMURA.
	Added loads of tests for STRING->NUMBER.
2009-06-06
	Extended domain of NUMBER->STRING to REAL.
	Added support for the "precision markers" D,F,L,S, although
	only one floating point precision exists.
	Fix: MANTISSA did not return negative signs.
	Fix: INEXACT->EXACT lost the sign of its operand.
	Fix: #I created a double sign in negative integers.
	Added/updated help pages for various procedures.
	Added more tests.
2009-06-05
	Fix: SIN, COS, TAN expected degrees, should be radians. Oops.
	Ran further 64-bit tests on the Alpha, all passed.
2009-06-04
	Implemented LOG and EXP procedures. Added tests.
	Fixed size of Called_procedures[]. Good catch, Masaru KIMURA.
2009-06-03
	Implemented CEILING, FLOOR, ROUND, TRUNCATE procedures.
	Implemented SIN, COS, and TAN procedures.
	Added tests for all of the above.
	Made procedures expecting integers accept real numbers too, as
	long as they are exact and can be converted to integer without
	loss of precision. Added tests.
	Made the reader accept an excess number of digits in the mantissa,
	giving an inexact number.
2009-06-02
	* I have tested this release on my Alpha with -DBITS_PER_WORD_64
	* and it passed all tests. If make test still fails on Linux/PPC,
	* I would need SSH access to a PPC box to investigate further.
	Implemented SQRT.
	Fixed INTEGER? (mistook random objects for integers).
	Removed some 64-bit glitches.
	Applied some cosmetics.
	Added test cases.
2009-06-01
	Implemented real number division (/).
	Made INTEGER? return #T for reals that can be converted to
	integer without loss of precision.
	Made INEXACT->EXACT return an integer whenever possible.